--- a/static/newtab.html
+++ b/static/newtab.html
@@ -6,6 +6,8 @@
 
     <script src="/build/newtab.js" type="text/javascript" charset="utf-8"></script>
 
+    <link rel="stylesheet" href="/static/reset.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="/static/roboto.css" type="text/css" media="all" />
     <link rel="stylesheet" href="/static/newtab.css" type="text/css" media="all" />
   </head>
   <body>
