Use a popup UI over the NTP
Includes a significant structural change to the source, introducing
services and actions.

--- a/static/popup.html
+++ b/static/popup.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 
-    <script src="/build/newtab.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/build/popup.js" type="text/javascript" charset="utf-8"></script>
 
     <link rel="stylesheet" href="/static/reset.css" type="text/css" media="all" />
     <link rel="stylesheet" href="/static/roboto.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="/static/newtab.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="/static/popup.css" type="text/css" media="all" />
   </head>
   <body>
     <div id="container"></div>
