--- a/static/popup.html
+++ b/static/popup.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 
+    <script src="/vendor/webextension-polyfill.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="/build/popup.js" type="text/javascript" charset="utf-8"></script>
 
     <link rel="stylesheet" href="/static/reset.css" type="text/css" media="all" />
