--- a/static/popup.html
+++ b/static/popup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
 
     <script src="/vendor/webextension-polyfill.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/dist/popup.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/build/dist/popup.js" type="text/javascript" charset="utf-8"></script>
 
     <link rel="stylesheet" href="/static/reset.css" type="text/css" media="all" />
     <link rel="stylesheet" href="/static/popup.css" type="text/css" media="all" />
