no synthetic imports/implicit any

--- a/static/manage-data.html
+++ b/static/manage-data.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
 
     <script src="/vendor/webextension-polyfill.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/build/dist/manage-data.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/build/dist/manage-data.js" type="text/javascript" charset="utf-8" async defer></script>
 
     <link rel="stylesheet" href="/static/reset.css" type="text/css" media="all" />
     <link rel="stylesheet" href="/static/base.css" type="text/css" media="all" />
