--- a/static/popup.html
+++ b/static/popup.html
@@ -1,14 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
 
-    <script src="/vendor/webextension-polyfill.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/build/dist/popup.js" type="text/javascript" charset="utf-8" async defer></script>
+    <script
+      src="/build/vendor/webextension-polyfill.min.js"
+      type="text/javascript"
+      charset="utf-8"
+    ></script>
+    <script
+      src="/build/dist/popup.js"
+      type="text/javascript"
+      charset="utf-8"
+      async
+      defer
+    ></script>
 
-    <link rel="stylesheet" href="/static/reset.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="/static/base.css" type="text/css" media="all" />
+    <link
+      rel="stylesheet"
+      href="/static/reset.css"
+      type="text/css"
+      media="all"
+    />
+    <link
+      rel="stylesheet"
+      href="/static/base.css"
+      type="text/css"
+      media="all"
+    />
   </head>
   <body>
     <div id="container"></div>
